# candle-metal-tester

./: .gitignore  Cargo.toml  Makefile  README.md
Tester/Tester/: ContentView.swift  TesterApp.swift  Wrap.swift
Tester/Tester.xcodeproj/: project.pbxproj
Tester/Wrap.xcframework/: Info.plist
Tester/Wrap.xcframework/ios-arm64/Headers/: module.modulemap  wrapFFI.h
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
libwrap/: Cargo.toml
libwrap/src/: lib.rs
