[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/evilsocket/candle.git", branch = "metal_ios_support", features = [
    "metal",
] }
candle-nn = { git = "https://github.com/evilsocket/candle.git", branch = "metal_ios_support", features = [
    "metal",
] }
candle-transformers = { git = "https://github.com/evilsocket/candle.git", branch = "metal_ios_support", features = [
    "metal",
] }
candle-metal-kernels = { git = "https://github.com/evilsocket/candle.git", branch = "metal_ios_support" }
metal = { version = "0.27.0", features = ["mps"] }
